# CrossPlatformKeyboardHook

./: CMakeLists.txt
HookInterface/: CMakeLists.txt
HookInterface/include/: interface.h
HookInterface/src/: interface_linux.cpp  interface_windows.cpp
MainApp/: CMakeLists.txt  main.cpp
